--- a/kghostview/README
+++ b/kghostview/README
@@ -1,3 +1,12 @@
+5/12/99
+Hey.  I'm the new maintainer.  Please send any bug reports or suggestions to me
+at <dsweet@chaos.umd.edu>.
+
+David Sweet
+
+
+
+
 
 18/3/98
 Mark Donohoe
