--- a/po/da/kfract.po
+++ b/po/da/kfract.po
@@ -8,7 +8,7 @@ msgstr ""
 "POT-Creation-Date: 1998-11-16 01:58+0100\n"
 "PO-Revision-Date: 1999-02-16 15:28+0100\n"
 "Last-Translator: Erik Kjær Pedersen <erik@binghamton.edu>\n"
-"Language-Team: da <LL@li.org>\n"
+"Language-Team: da <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -94,7 +94,7 @@ msgstr "Standard for denne type"
 
 #: kfract.C:280
 msgid "Oops!"
-msgstr "Uha!"
+msgstr "Hovsa!"
 
 #: kfract.C:280
 msgid "Oops! Not implemented yet."
