--- a/po/da/ksnapshot.po
+++ b/po/da/ksnapshot.po
@@ -8,7 +8,7 @@ msgstr ""
 "POT-Creation-Date: 1999-03-05 01:49+0100\n"
 "PO-Revision-Date: 1999-02-16 01:48+0500\n"
 "Last-Translator: Erik Kjær Pedersen <erik@binghamton.edu>\n"
-"Language-Team: da <LL@li.org>\n"
+"Language-Team: da <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
