Fixed bug # 712 - changes in orientation like Landscape->Seascape were not causing a screen update, because the window size was not changing. KPS::layout() is changed to KPS::KPSLayout( Bool force ) so calling with force=True causes a screen update even if the window size didnt change.
Duncan Haldane <duncan@kde.org>


SP::

--- a/kghostview/ChangeLog
+++ b/kghostview/ChangeLog
@@ -1,3 +1,12 @@
+  * [Duncan Haldane] <duncan@kde.org>  Fixed bug #712; 
+	changed KPSWidget::layout() to KSPWidget::KPSLayout( Bool force )
+	to allow forcing an image update by calling KPSLayout( True )
+	for changes like Landscape<-> Seascape orientation which do not 
+	change the image size. The name layout() is changed to KPSLayout() 
+	to avoid confusion with QT's layout() function.  May 23, 1999.  
+	Fix essentially follows suggestion by submitter of Bug report:
+        Sven Fischer <herpes@kawo2.rwth.aachen.de>
+
 Version 0.7:
   * [Mark Donohoe] Patch from Jake Hamy <jehamby@lightside.com> which
                      incorporates code from Johanes Plass' GV. This adds
