--- a/po/no/kghostview.po
+++ b/po/no/kghostview.po
@@ -697,10 +697,4 @@ msgstr "Sk.%d "
 
 #: zoom.cpp:63
 msgid "&Zoom factor"
-msgstr ""
-
-#~ msgid "View Control"
-#~ msgstr "Visningskontrol"
-
-#~ msgid "&Magnification"
-#~ msgstr "&Forstørrelse"
+msgstr "F&aktor for forsørrelse"
