--- a/po/ru/kghostview.po
+++ b/po/ru/kghostview.po
@@ -32,7 +32,7 @@ msgstr "Отметить нечетные страницы"
 
 #: marklist.cpp:42
 msgid "Toggle page marks"
-msgstr "Перевренуть все отметки страниц"
+msgstr "Перевернуть все отметки страниц"
 
 #: marklist.cpp:43
 msgid "Remove page marks"
@@ -176,7 +176,7 @@ msgstr "Имя &принтера"
 
 #: print.cpp:73
 msgid "&Spooler command"
-msgstr "Сомманда спулера"
+msgstr "Команда спулера"
 
 #: print.cpp:85
 msgid "&Environment variable"
@@ -231,10 +231,10 @@ msgid ""
 "range for this part of the document.\n"
 "Check the status bar for this information.\n"
 msgstr ""
-"Дипазон страниц для печати\n"
+"Диапазон страниц для печати\n"
 "не верен.\n"
 "\n"
-"Указанный дипазон должен лежать внутри\n"
+"Указанный диапазон должен лежать внутри\n"
 "диапазона этой части документа.\n"
 "Проверьте строку состояния для информации.\n"
 
@@ -302,11 +302,11 @@ msgid ""
 "command line options.\n"
 msgstr ""
 "Смотрите документацию по Qt и KDE для\n"
-"ключей коммандной строки.\n"
+"ключей командной строки.\n"
 
 #: main.cpp:30
 msgid "Error on command line"
-msgstr "Ошибка в коммандной строке"
+msgstr "Ошибка в командной строке"
 
 #
 #: kghostview.cpp:206
@@ -597,7 +597,7 @@ msgid ""
 msgstr ""
 "Уже ждем-с\n"
 "завершения сетевой задачи.\n"
-"Пожайлуста подождите.\n"
+"Пожалуйста подождите.\n"
 "Или остановите задаче."
 
 #: kghostview.cpp:792
