--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kdegraphics (4:1.1.1-19990612-2) unstable; urgency=low
+
+  * Fixed kderules script so "extra license" error goes away
+  * minor code cleanup
+
+ -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 14 Jun 1999 03:30:56 -0400
+
 kdegraphics (4:1.1.1-19990612-1) unstable; urgency=low
 
   * new upstream CVS version
